--- a/src/views/settings/Settings.sass
+++ b/src/views/settings/Settings.sass
@@ -170,3 +170,7 @@
 
         &:hover
             background-color: color.adjust(#3498db, $lightness: -20%) !important
+
+@media (prefers-color-scheme: light)
+    .Settings .Widget
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07), 0 0 0 0.5px rgba(0, 0, 0, 0.05)
