--- a/src/views/settings/Widget.sass
+++ b/src/views/settings/Widget.sass
@@ -1,7 +1,7 @@
 .Settings .Widget
     border: none
     border-radius: 0.5rem
-    background: rgba(var(--surface-raised-rgb), 0.75)
+    background: rgba(var(--surface-raised-rgb), var(--surface-raised-alpha, 0.75))
     margin: 1em 0
     padding: 1em
 
